// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenBalances.vue Should display token balances 1`] = `
<div class="container container--fluid">
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__text">
      <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
        <header class="v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
          <div class="v-toolbar__content" style="height: 48px;">
            <div class="spacer"></div>
            <div class="v-input theme--light v-input--selection-controls v-input--switch">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-9" role="switch" type="checkbox" aria-disabled="false" value="">
                    <div class="v-input--selection-controls__ripple"></div>
                    <div class="v-input--switch__track theme--light"></div>
                    <div class="v-input--switch__thumb theme--light">
                      <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                    </div>
                  </div><label for="input-9" class="v-label theme--light" style="left: 0px; position: relative;">Unformatted Balances</label>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
        </header>
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Balance: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Balance</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
              </tr>
            </thead>
            <tbody>
              <tr class="">
                <td class="text-start">
                  <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x123" type="address"></hash-link-stub>
                </td>
                <td class="text-start">
                  99,999,989,989.989999 ETL
                </td>
              </tr>
              <tr class="">
                <td class="text-start">
                  <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x456" type="address"></hash-link-stub>
                </td>
                <td class="text-start">
                  999,999.899899 USDC
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div class="v-data-footer">
          <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
              <div class="v-input__control">
                <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-19" class="v-input__slot">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-19" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                    </div><input type="hidden" value="10">
                  </div>
                  <div class="v-menu">
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-data-footer__pagination">1-2 of 2</div>
          <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
          <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TokenBalances.vue Should hide the topbar if in dense mode 1`] = `
<div class="container container--fluid">
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__text">
      <div class="v-data-table v-data-table--has-bottom theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Balance: Sorted descending. Activate to remove sorting." aria-sort="descending" class="text-start sortable active desc"><span>Balance</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
              </tr>
            </thead>
            <tbody>
              <tr class="">
                <td class="text-start">
                  <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x456" type="address"></hash-link-stub>
                </td>
                <td class="text-start">
                  2
                </td>
              </tr>
              <tr class="">
                <td class="text-start">
                  <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x123" type="address"></hash-link-stub>
                </td>
                <td class="text-start">
                  1
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div class="v-data-footer">
          <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
              <div class="v-input__control">
                <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-42" class="v-input__slot">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-42" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                    </div><input type="hidden" value="10">
                  </div>
                  <div class="v-menu">
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-data-footer__pagination">1-2 of 2</div>
          <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
          <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
